# aoc-2024

./: .gitignore  CMakeLists.txt
day_01/: day_01_part_1.c  day_01_part_2.c
day_02/: day_02_part_1.c  day_02_part_2.c
day_03/: day_03_part_1.c  day_03_part_2.c
day_04/: day_04_part_1.c  day_04_part_2.c
day_05/: day_05_part_1.c  day_05_part_2.c
day_06/: day_06_part_1.c  day_06_part_2.c
day_07/: day_07_part_1.c  day_07_part_2.c
day_08/: day_08_part_1.c  day_08_part_2.c
day_09/: day_09_part_1.c  day_09_part_2.c
day_10/: day_10_part_1.c  day_10_part_2.c
day_11/: day_11_part_1.c  day_11_part_2.c
day_12/: day_12_part_1.c  day_12_part_2.c
day_13/: day_13_part_1.c  day_13_part_2.c
day_14/: day_14_part_1.c  day_14_part_2.c
day_15/: day_15_part_1.c  day_15_part_2.c
