cmake_minimum_required(VERSION 3.28)
project(aoc_2024 C)

set(CMAKE_C_STANDARD 11)

add_executable(aoc_2024_day_01_part_1 day_01/day_01_part_1.c)
add_executable(aoc_2024_day_01_part_2 day_01/day_01_part_2.c)

add_executable(aoc_2024_day_02_part_1 day_02/day_02_part_1.c)
add_executable(aoc_2024_day_02_part_2 day_02/day_02_part_2.c)

add_executable(aoc_2024_day_03_part_1 day_03/day_03_part_1.c)
add_executable(aoc_2024_day_03_part_2 day_03/day_03_part_2.c)
