cmake_minimum_required(VERSION 3.28)
project(aoc_2024 C)

set(CMAKE_C_STANDARD 11)

add_executable(aoc_2024_day_01_part_1 day_01/day_01_part_1.c)
add_executable(aoc_2024_day_01_part_2 day_01/day_01_part_2.c)

add_executable(aoc_2024_day_02_part_1 day_02/day_02_part_1.c)
add_executable(aoc_2024_day_02_part_2 day_02/day_02_part_2.c)

add_executable(aoc_2024_day_03_part_1 day_03/day_03_part_1.c)
add_executable(aoc_2024_day_03_part_2 day_03/day_03_part_2.c)

add_executable(aoc_2024_day_04_part_1 day_04/day_04_part_1.c)
add_executable(aoc_2024_day_04_part_2 day_04/day_04_part_2.c)

add_executable(aoc_2024_day_05_part_1 day_05/day_05_part_1.c)
add_executable(aoc_2024_day_05_part_2 day_05/day_05_part_2.c)

add_executable(aoc_2024_day_06_part_1 day_06/day_06_part_1.c)
add_executable(aoc_2024_day_06_part_2 day_06/day_06_part_2.c)

add_executable(aoc_2024_day_07_part_1 day_07/day_07_part_1.c)
add_executable(aoc_2024_day_07_part_2 day_07/day_07_part_2.c)

add_executable(aoc_2024_day_08_part_1 day_08/day_08_part_1.c)
add_executable(aoc_2024_day_08_part_2 day_08/day_08_part_2.c)

add_executable(aoc_2024_day_09_part_1 day_09/day_09_part_1.c)
add_executable(aoc_2024_day_09_part_2 day_09/day_09_part_2.c)

add_executable(aoc_2024_day_10_part_1 day_10/day_10_part_1.c)
add_executable(aoc_2024_day_10_part_2 day_10/day_10_part_2.c)

add_executable(aoc_2024_day_11_part_1 day_11/day_11_part_1.c)
add_executable(aoc_2024_day_11_part_2 day_11/day_11_part_2.c)

add_executable(aoc_2024_day_12_part_1 day_12/day_12_part_1.c)
add_executable(aoc_2024_day_12_part_2 day_12/day_12_part_2.c)
